Modify body padding on mobile displays

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,6 +1,6 @@
 /*   
  * Template Name: Evan Granito
- * Version: 1.0
+ * Version: 0.1
  * Author: Evan Granito
  * Website: http://evangranito.com
 */
@@ -15,12 +15,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+/*
 @media (max-width: 767px) {
     body{ 
         padding: 0;
     }
 }
-
+*/
 h1,
 h2,
 h3,
